# clocks

./: .dir-locals.el  .gitignore  CLAUDE.md  Makefile  README.org  context.org  doc.org  package-lock.json  package.json  start-dev  start_dev  team.org
backend/: README.md  mix.exs
bash/: lib.bash
certs/: ca-cert.pem  ca-cert.srl  ca-key.pem  dev-cert.pem  dev-csr.pem  dev-ext.cnf  dev-key.pem
context/: ca-certifications.org  definitions.org  invocation-as-message-passing.org
deployment/: vm.scm
doc/: ,app-start.org  ,backend-iex-start.org  ,frontend-fetch.org  ,image-init-build.org  ,synchronize-with-upstream.org  ,todos.org  ,vm-deploy.org  ,vm-init-start.org  .dir-locals.el  backlog.org  contributing.org  doc.org  elixir-conventions.org  env-start.org  git-config.org  how-to-do-x.org  module.org  os-dev.org  pr.org  specification.org  task.org  team.org  todo.org  type.org
emacs.d/: .gitignore  init.el
etc/: bash-dev-profile  bash-dev-session  channels.scm  manifest.scm
guix/: machine.scm  manifest.scm
os/: 0-init.scm  1.scm  12.scm  dev.scm  init-hetzner.scm  init.scm  prod.scm
phoenix/: .gitignore  mix.exs
python/: pyproject.toml  pyrightconfig.json
python/data/: dev-os.scm  machine.scm  package.scm
python/lib/: app.py  backend.py  chars.py  check.py  cmd.py  db.py  frontend.py  fs.py  guix.py  help.py  image.py  ip.py  log.py  maybe.py  mode.py  osys.py  params.py  port.py  scheme.py  seq.py  ssh.py  vm.py
python/lib/clocks/: app.py  authority.py  backend.py  check.py  cmd.py  constant.py  db.py  frontend.py  fs.py  guix.py  help.py  image.py  ip.py  log.py  machine.py  maybe.py  message.py  mode.py  module.py  nat.py  osys.py  package.py  params.py  port.py  projectctl.py  result.py  scheme.py  seq.py  ssh.py  string.py  vm.py
scheme/: manifest.scm
secret/: clocks
ssh/: ed25519.pub  ssh_host_ed25519  ssh_host_ed25519.pub
team/: architect.org  developer.org  salesrep.org
(+224 files in other folders)
